// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`async: async dist/index.js 1`] = `
"'use strict';

function _async(f) {
  return function () {
    for (var args = [], i = 0; i < arguments.length; i++) {
      args[i] = arguments[i];
    }

    try {
      return Promise.resolve(f.apply(this, args));
    } catch (e) {
      return Promise.reject(e);
    }
  };
}

const a = {
  a: 1
};
var index = _async(function () {
  return Object.assign({}, a, {
    b
  });
});

module.exports = index;
"
`;

exports[`bundle-node-modules: bundle-node-modules dist/index.js 1`] = `
"'use strict';

function _interopDefault (ex) { return (ex && (typeof ex === 'object') && 'default' in ex) ? ex['default'] : ex; }

var all = _interopDefault(require('some-package-that-does-not-exists'));

var pokemon = ['test'];

var index = {
  all,
  pokemon
};

module.exports = index;
"
`;

exports[`custom rollup plugin: custom rollup plugin dist/index.js 1`] = `
"'use strict';

Object.defineProperty(exports, '__esModule', { value: true });

const tt = 'is there anything?';

function afun() {
  return tt;
}

function another() {
  return afun();
}

exports.another = another;
"
`;

exports[`defaults: defaults dist/index.js 1`] = `
"'use strict';

var index = 42;

module.exports = index;
"
`;

exports[`exclude file: exclude file dist/index.js 1`] = `
"'use strict';

var foo = 'foo';

module.exports = foo;
"
`;

exports[`extendOptions: extendOptions dist/bar.js 1`] = `
"'use strict';

var bar = 'bar';

module.exports = bar;
"
`;

exports[`extendOptions: extendOptions dist/bar.umd.js 1`] = `
"(function (global, factory) {
	typeof exports === 'object' && typeof module !== 'undefined' ? module.exports = factory() :
	typeof define === 'function' && define.amd ? define(factory) :
	(global = global || self, global.umd = factory());
}(this, (function () { 'use strict';

	var bar = 'bar';

	return bar;

})));
"
`;

exports[`extendOptions: extendOptions dist/bar.umd.min.js 1`] = `
"!function(e,n){\\"object\\"==typeof exports&&\\"undefined\\"!=typeof module?module.exports=n():\\"function\\"==typeof define&&define.amd?define(n):(e=e||self).min=n()}(this,(function(){\\"use strict\\";return\\"bar\\"}));
"
`;

exports[`extendOptions: extendOptions dist/foo.js 1`] = `
"'use strict';

var foo = 'foo';

module.exports = foo;
"
`;

exports[`extendOptions: extendOptions dist/foo.umd.js 1`] = `
"(function (global, factory) {
	typeof exports === 'object' && typeof module !== 'undefined' ? module.exports = factory() :
	typeof define === 'function' && define.amd ? define(factory) :
	(global = global || self, global.umd = factory());
}(this, (function () { 'use strict';

	var foo = 'foo';

	return foo;

})));
"
`;

exports[`extendOptions: extendOptions dist/foo.umd.min.js 1`] = `
"!function(e,n){\\"object\\"==typeof exports&&\\"undefined\\"!=typeof module?module.exports=n():\\"function\\"==typeof define&&define.amd?define(n):(e=e||self).min=n()}(this,(function(){\\"use strict\\";return\\"foo\\"}));
"
`;

exports[`inline-certain-modules: inline-certain-modules dist/index.js 1`] = `
"'use strict';

require('another-module');

var fakeModule = a => a;

var index = fakeModule(1);

module.exports = index;
"
`;

exports[`target:browser: target:browser dist/index.js 1`] = `
"'use strict';

var foo = 'browser';

module.exports = foo;
"
`;

exports[`uglify: uglify dist/index.min.js 1`] = `
"\\"use strict\\";Object.defineProperty(exports,\\"__esModule\\",{value:!0});const a=1;exports.a=1;
"
`;
